Fix vertical spacing when screen height is larger

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,8 @@
 .landingPageBody {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+    justify-content: center;
 }
 
 .header {
