--- a/src/index.css
+++ b/src/index.css
@@ -52,11 +52,7 @@
   box-sizing: border-box;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
+
 
 body {
   margin: 0;
